scenarios/03-argo-cd/whoami-by-manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  replicas: 6
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: traefik/whoami:v1.11
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "2Mi"
            cpu: "2m"
          limits:
            memory: "32Mi"
            cpu: "25m"
