scenarios/03-argo-cd/whoami-by-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  # namespace: teste # Deve estar no mesmo namespace
spec:
  rules:
    - host: whoami.localhost # Substitua pelo seu domínio configurado no DNS
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami # Nome do Service criado acima
                port:
                  number: 80
